static/css/styles.css
* {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    text-decoration: none
}

:after, :before {
    -webkit-box-sizing: inherit;
    box-sizing: inherit
}

img {
    max-width: 100%
}

:root {
    --black: #000;
    --green: #4ee58b;
    --white: #fff;
    --grey: #231f20
}

@font-face {
    font-family: Greve;
    font-style: normal;
    src: url(../fonts/greve-800-web.woff2) format("woff2"), url(../fonts/greve-800-web.woff) format("woff")
}

@font-face {
    font-family: Katwijk Bold;
    font-style: normal;
    src: url(../fonts/katwijk-mono-bold-web.woff2) format("woff2"), url(../fonts/katwijk-mono-bold-web.woff) format("woff"), url(../fonts/katwijk-mono-bold-web.ttf) format("truetype")
}

body, html {
    color: #231f20;
    color: var(--grey);
    font-family: Katwijk, monospace;
    font-size: 100%;
    font-weight: 700
}

.dcs-button {
    background-color: #231f20;
    background-color: var(--grey);
    -webkit-box-shadow: .3rem .3rem 0 #fff;
    box-shadow: .3rem .3rem 0 #fff;
    -webkit-box-shadow: .3rem .3rem 0 var(--white);
    box-shadow: .3rem .3rem 0 var(--white);
    color: #fff;
    color: var(--white);
    display: -webkit-inline-box;
    display: -ms-inline-flexbox;
    display: inline-flex;
    font: 400 1.5rem/1.5rem Greve, Impact, sans-serif;
    letter-spacing: .06rem;
    padding: 1rem 2rem;
    text-align: center;
    text-decoration: none;
    text-transform: uppercase;
    white-space: nowrap;
    border: 0;
    cursor: pointer
}

.dcs-button:focus, .dcs-button:hover {
    background-color: #fff;
    background-color: var(--white);
    -webkit-box-shadow: .3rem .3rem 0 #000;
    box-shadow: .3rem .3rem 0 #000;
    -webkit-box-shadow: .3rem .3rem 0 var(--black);
    box-shadow: .3rem .3rem 0 var(--black);
    color: #000;
    color: var(--black)
}

.dcs-button:focus {
    outline: 2px dotted #000;
    outline: 2px dotted var(--black)
}

.dcs-button__icon {
    font-size: 1.5rem;
    height: 100%;
    display: inline-block;
    padding-left: .5rem;
    width: 1rem
}

@media (min-width: 900px) {
    .dcs-button {
        font-size: 1.75rem;
        line-height: 1;
        padding: .8rem 3rem
    }
}

.dcs-close {
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    cursor: pointer;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    height: 100%;
    max-height: 3rem;
    max-width: 3rem;
    position: relative;
    width: 100%;
    background-color: transparent;
    padding: 0;
    border: 0
}

.dcs-close:after, .dcs-close:before {
    background-color: rgba(0, 0, 0, .5);
    content: "";
    height: 1.2rem;
    position: absolute;
    width: 2px
}

.dcs-close:before {
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg)
}

.dcs-close:after {
    -webkit-transform: rotate(-45deg);
    transform: rotate(-45deg)
}

.dcs-close:focus:after, .dcs-close:focus:before, .dcs-close:hover:after, .dcs-close:hover:before {
    background-color: #000
}

.dcs-close:focus {
    outline: 2px dotted #000;
    outline: 2px dotted var(--black)
}

.dcs-close.dcs-full-page-close:after, .dcs-close.dcs-full-page-close:before {
    height: 2rem;
    background-color: #000
}

.dcs-logo {
    max-height: 5rem
}

.dcs-logo--med {
    max-height: 10rem
}

@media (min-width: 900px) {
    .dcs-logo {
        max-height: 2.8rem
    }

    .dcs-logo--med {
        max-height: 10rem
    }
}

.dcs-sr-only {
    height: 1px;
    left: -10000px;
    overflow: hidden;
    position: absolute;
    top: auto;
    width: 1px
}

.dcs-footer {
    background-color: #4ee58b;
    background-color: var(--green);
    bottom: 0;
    -webkit-box-shadow: 0 0 1.6rem rgba(0, 0, 0, .2);
    box-shadow: 0 0 1.6rem rgba(0, 0, 0, .2);
    font-family: Katwijk Bold;
    left: 0;
    padding: 1.25rem 1.25rem 2rem;
    position: fixed;
    right: 0;
    width: 100%
}

.dcs-footer__close {
    height: 3rem;
    position: absolute;
    right: 0;
    top: 0;
    width: 3rem
}

.dcs-footer__container {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    margin: 0 auto;
    max-width: 50rem
}

.dcs-footer__logo {
    display: block;
    -webkit-box-flex: 0;
    -ms-flex: 0 0 15%;
    flex: 0 0 15%
}

.dcs-footer__main {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 70%;
    flex: 0 0 70%;
    margin: 0 1rem
}

.dcs-footer__body {
    color: #231f20;
    color: var(--grey);
    font: normal .875rem/1rem Katwijk Bold, Courier, sans-serif;
    max-width: 26rem
}

.dcs-footer__action {
    margin: 1rem 0 0
}

@media (min-width: 900px) {
    .dcs-footer {
        padding: 2rem
    }

    .dcs-footer__container {
        max-width: 60rem
    }

    .dcs-footer__logo {
        -webkit-box-flex: 0;
        -ms-flex: 0 0 10%;
        flex: 0 0 10%
    }

    .dcs-footer__main {
        -webkit-box-flex: 1;
        -ms-flex: 1;
        flex: 1;
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex
    }

    .dcs-footer__body {
        font-size: 1.125rem;
        line-height: 1.5rem;
        max-width: none
    }

    .dcs-footer__action {
        display: inline-block;
        margin: 0 0 0 1rem
    }
}

.dcs-full-page {
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    background-color: #4ee58b;
    background-color: var(--green);
    bottom: 0;
    color: #231f20;
    color: var(--grey);
    display: none;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
    width: 100%;
    text-align: center
}

.dcs-full-page__container {
    max-width: 40rem
}

.dcs-full-page__close {
    display: none;
    height: 2.5rem;
    position: absolute;
    right: 0;
    top: 0;
    width: 2.5rem
}

.dcs-full-page__main {
    padding: 1rem
}

.dcs-full-page__logo {
    margin: 0 auto;
    width: 5.7rem;
    display: block
}

.dcs-full-page__body {
    margin: 2.25rem auto 0
}

.dcs-full-page__body p {
    font: normal 3.2rem/3.5rem Greve
}

.dcs-full-page__action {
    margin: 1.25rem auto 0
}

.dcs-full-page__footer {
    bottom: 0;
    font: 400 10px/13px Katwijk Bold, monospace;
    left: 0;
    position: absolute;
    right: 0;
    text-align: center
}

.dcs-full-page__footer small {
    display: inline-block;
    max-width: 15.6rem;
    margin: 3rem auto
}

.dcs-website-name__prefix {
    display: none
}

@media (min-width: 900px) {
    .dcs-full-page__footer {
        font-size: .875rem;
        line-height: 1.4
    }
}

@media (max-height: 600px) {
    .dcs-full-page__body p {
        font: normal 2.2rem/2.5rem Greve
    }
}

